<resources>
    <string name="app_name">Sentinel</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="labelTemperature">Temperatura</string>
    <string name="labelHumidity">Humidade</string>
    <string name="labelAirQuality">Qualidade\ndo Ar</string>
    <string name="labelRefreshButton">Refresh</string>
    <string name="back">Back</string>
    <string name="All">All</string>
    <string name="Favorites">Favorites</string>
    <string name="Close">Close to you</string>
    <string name="limits">Set graphs\' limits</string>
    <string name="reset_limits">Reset Graphs</string>
    <string name="temp_limits">Set Temperature Limits</string>
    <string name="hum_limits">Set Humidity Limits</string>
    <string name="qual_limits">Set Quality Limits</string>
    <string name="title_temperature_graph">Temperature / Time</string>
    <string name="title_humidity_graph">Humidity / Time</string>
    <string name="title_quality_graph">Air Quality / Time</string>
    <string name="Change">Change</string>
    <string name="OldPassword">Old Password</string>
    <string name="NewPassword">New Password</string>
    <string name="ChangeUsername">Change Username</string>
    <string name="ChangePassword">Change Password</string>
    <string name="DeleteMyData">Delete My Exposore Data</string>
    <string name="DeleteAccount">Delete My Account</string>
    <string name="NewUsername">New Name</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Name">Name</string>
    <string name="MyExposure">MyExposure</string>
    <string name="Average">Average:</string>
    <string name="Temperature">Temperature:</string>
    <string name="Humidity">Humidity:</string>
    <string name="QualidadeDoAr">Qualidade do Ar:</string>
    <string name="Avg">Media:</string>
    <string name="Temperatura">Temperature:</string>
    <string name="Humidade">Humidade</string>
    <string name="PercursoDiarioVazio">Percurso Diario Vazio!</string>
    <string name="Humidades">Humidade:</string>
    <string name="TemperatureText">Temperatura</string>
    <string name="temp">Temperatura:</string>
    <string name="nOn">Notifications\nON</string>
    <string name="nOff">Notifications\nOFF</string>
</resources>
