<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".MyExposureActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:clipChildren="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyExposure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/MyExposure"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewAverage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Avg"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTemperatureText"
                    android:layout_width="394dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temp"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textViewAvgTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewHumidityText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Humidades"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/textViewAvgHumidity"
                    android:layout_width="237dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewNoExposures"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/PercursoDiarioVazio"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewAirQuality"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/QualidadeDoAr"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/linearChart"
                android:layout_width="match_parent"
                android:layout_height="215dp">

            </com.github.mikephil.charting.charts.LineChart>

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:isScrollContainer="false"
                tools:listitem="@android:layout/simple_list_item_1">

            </ListView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>